--- a/Portfolio/Portfolio.css
+++ b/Portfolio/Portfolio.css
@@ -65,7 +65,6 @@ h1.aboutHead{
 .aboutText{
     width: 60vw;
     height: 475px;
-    color: #fff;
     margin-left: 30px;
     padding-top: 30px;
     font-size: larger;
@@ -73,6 +72,7 @@ h1.aboutHead{
 }
 
 div.aboutText p{
+    color: #fff;
     background-color: #333333;
     padding: 50px;
     padding-bottom: 20px;
@@ -81,15 +81,15 @@ div.aboutText p{
 div.aboutText button{
     margin-top: 0%;
     margin-left: 50px;
-    color: #fff;
+    color: #000;
     padding: 15px;
     border-radius: 20px;
-    background-color: #1e1e1e;
-    transition: 1s;
+    background-color: aqua;
+    transition: 0.3s;
 }
 
 div.aboutText button:hover{
-    background-color: #252526;
+    transform: scale(1.1);
 }
 
 .aboutImg{
@@ -179,8 +179,6 @@ div.progSkills i{
 div.progSkills i:hover{
     transform: scale(1.3);
 }
-
-
 
 div.database{
     padding: 5px;
@@ -322,6 +320,38 @@ div.proj3{
 
 .proj3 button:hover{
     transform: scale(1.1);
+}
+
+h1.resumeHead{
+    color: #fff;
+    font-size: 250%;
+    margin-left: 30%;
+    font-family: "Lucida Handwriting",  cursive;
+}
+
+div.resume{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div.resume a button{
+    color: black;
+    border-radius: 25px;
+    font-size: 20px;
+    padding: 20px;
+    background-color: aqua;
+    transition: 0.3s;
+}
+
+div.resume a button:hover{
+    transform: scale(1.1);
+}
+
+div.resume a button i{
+    color: black;
+    padding-left: 10px;
+    background-color: aqua;
 }
 
 h1.contactMe{
